--- a/css/components/icon-row.css
+++ b/css/components/icon-row.css
@@ -10,6 +10,7 @@
   align-items: center;
   width: 25%;
   margin-bottom: 50px;
+  transition: all 0.5s ease-in-out;
 }
 
 .icon-row__icon i {
@@ -21,4 +22,8 @@
   width: 80px;
   text-align: center;
   line-height: 20px;
+}
+
+.icon-row__icon:hover {
+  transform: scale(1.3);
 }
