--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -2,7 +2,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #f9f9fa;
+  background-color: black;
   padding: 20px 50px;
   box-sizing: border-box;
   border-top: 1px solid #ededed;
@@ -51,6 +51,10 @@
     opacity: 1;
     transform: none;
   }
+}
+
+.nav__btn i {
+  color: var(--yellow);
 }
 
 .nav__btn {
