--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -3,6 +3,7 @@
   position: fixed;
   top: 0px;
   width: 100%;
+  background-color: black;
   box-sizing: border-box;
   justify-content: center;
   padding: 5px 3px;
@@ -11,6 +12,7 @@
 .status-bar__column {
   width: 33%;
   font-weight: 600;
+  color: var(--yellow);
 }
 
 .status-bar__column:first-child span {
