--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -16,8 +16,9 @@
 .user-component__avatar {
   width: 70px;
   height: 70px;
-  border-radius: 27px;
+  border-radius: 30px;
   margin-right: 20px;
+  background-color: black;
 }
 .user-component__title {
   font-weight: 600;
