--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -7,10 +7,13 @@
 #chat-screen .alt-header,
 #chat-screen .status-bar {
   position: fixed;
-  background-color: #abc1d1;
   top: 0px;
   width: 100%;
   box-sizing: border-box;
+}
+
+#chat-screen .alt-header {
+  background-color: #abc1d1;
 }
 
 #chat-screen .status-bar {
@@ -70,6 +73,7 @@
   width: 100%;
   display: flex;
   margin-bottom: 25px;
+  z-index: -5;
 }
 
 .message-row img {
