--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -35,7 +35,7 @@
 }
 
 #splash-screen {
-  background-color: var(--yellow);
+  background-color: black;
   position: absolute;
   height: 100vh;
   width: 100vw;
@@ -44,6 +44,9 @@
   justify-content: center;
   align-items: center;
   font-size: 132px;
-  animation: hideSplash 0.4s ease-in-out forwards;
-  animation-delay: 1.6s;
+  animation: hideSplash 0.5s ease-in-out forwards;
+  animation-delay: 1s;
+}
+#splash-screen img {
+  width: 90%;
 }
