--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -26,7 +26,8 @@
   align-items: center;
 }
 
-.more-suggestions__icon-img {
+.more-suggestions__icon-img,
+.more-suggestions__icon-img img {
   width: 60px;
   height: 60px;
   background-color: var(--yellow);
