--- a/css/variables.css
+++ b/css/variables.css
@@ -1,6 +1,6 @@
 :root {
-  --yellow: #fae100;
+  --yellow: #f5a8bb;
   --horizontal-space: 25px;
-  --main-border: 1px solid rgba(0, 0, 0, 0.2);
+  --main-border: 1px solid #f5a8bb;
   --main-grey: rgba(0, 0, 0, 0.5);
 }
